// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`< InfoDivider /> should show skeleton when isLoading is true: WithLoading 1`] = `
<div>
  <div
    class="css-7xu97p"
    data-testid="info-divider"
  >
    <div
      class="chakra-skeleton css-1nk8ui6"
    />
    <hr
      aria-orientation="horizontal"
      class="chakra-divider css-17lr3d7"
    />
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</div>
`;

exports[`< InfoDivider /> type: main Should render correctly with just title: Main - just title 1`] = `
<DocumentFragment>
  <div
    class="css-7xu97p"
    data-testid="info-divider"
  >
    <div
      class="css-1vakbk4"
    >
      <p
        class="css-au6g18"
      >
        Example
      </p>
    </div>
    <hr
      aria-orientation="horizontal"
      class="chakra-divider css-17lr3d7"
    />
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`< InfoDivider /> type: main Should render correctly with number: Main - with number 1`] = `
<DocumentFragment>
  <div
    class="css-7xu97p"
    data-testid="info-divider"
  >
    <div
      class="css-1vakbk4"
    >
      <p
        class="css-1yxrt0f"
      >
        01
      </p>
      <p
        class="css-au6g18"
      >
        Example
      </p>
    </div>
    <hr
      aria-orientation="horizontal"
      class="chakra-divider css-17lr3d7"
    />
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`< InfoDivider /> type: main Should render correctly with step: Main - with step 1`] = `
<DocumentFragment>
  <div
    class="css-7xu97p"
    data-testid="info-divider"
  >
    <div
      class="css-1qxb07t"
    >
      <p
        class="css-wc1iqz"
      >
        1
      </p>
      <p
        class="css-au6g18"
      >
        Example
      </p>
    </div>
    <hr
      aria-orientation="horizontal"
      class="chakra-divider css-17lr3d7"
    />
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`< InfoDivider /> type: secondary Should render correctly with just title: Secondary - just title 1`] = `
<DocumentFragment>
  <div
    class="css-c1i75i"
    data-testid="info-divider"
  >
    <div
      class="css-1vakbk4"
    >
      <p
        class="css-i1zaha"
      >
        Example
      </p>
    </div>
    <hr
      aria-orientation="horizontal"
      class="chakra-divider css-1mwizes"
    />
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`< InfoDivider /> type: secondary Should render correctly with number: Secondary - with number 1`] = `
<DocumentFragment>
  <div
    class="css-c1i75i"
    data-testid="info-divider"
  >
    <div
      class="css-1vakbk4"
    >
      <p
        class="css-1yxrt0f"
      >
        01
      </p>
      <p
        class="css-i1zaha"
      >
        Example
      </p>
    </div>
    <hr
      aria-orientation="horizontal"
      class="chakra-divider css-1mwizes"
    />
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
